Created karma damage source element

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -244,6 +244,7 @@
   "item.better_tools.tough_crystal": "§7Tough Crystal",
   "item.better_tools.echo_crystal": "§3Echo Crystal",
   "item.minecraft.splash_potion.effect.double_jump_potion_long": "Splash Potion of Double Jump",
+  "death.attack.karma_damage": "%1$s got instant karma from %2$s",
   "item.better_tools.sapphire_shovel": "Sapphire Shovel",
   "advancements.guardian_staff_multikill_adv.title": "Bubble Burst",
   "advancements.electric_staff_pokemon_adv.title": "It\u0027s super effective!",
@@ -442,6 +443,7 @@
   "item.minecraft.potion.effect.swift_swim_potion_2": "Potion of Rapidity",
   "item.better_tools.crystallite_axe_amethyst": "Crystallite Axe",
   "advancements.cactus_crystal_adv.descr": "Wear a Cactus Shirt and Crystal Leggings at the same time",
+  "death.attack.karma_damage.player": "%1$s got instant karma whilst trying to escape %2$s",
   "block.better_tools.polished_diamond_block": "Metallic Diamond Block",
   "item.copper_tools_and_armor.shrunk_music": "Toys on a Tear",
   "item.better_tools.crystallite_axe_sapphire": "Crystallite Axe",
@@ -539,6 +541,7 @@
   "item.better_tools.crystallite_axe_sky": "Crystallite Axe",
   "item.better_tools.crystallite_axe_diamond": "Crystallite Axe",
   "advancements.ruby_pickaxe_adv.title": "Ruby-fficiency",
+  "death.attack.karma_damage.item": "%1$s got instant karma from %2$s using %3$s",
   "item.better_tools.ruby_sword": "Ruby Sword",
   "enchantment.better_tools.desperation.desc": "Deal a lot more damage the less HP you currently have, but has no effect at high HP",
   "item.better_tools.topaz_sword": "Topaz Sword",
