Fixed karma damage procedures

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -51,7 +51,6 @@
   "effect.double_jump": "Double Jump",
   "gui.better_tools.attributes_viewer.label_attribute": "Attribute",
   "item.better_tools.crystallite_armor_sapphire_boots": "Crystallite Boots",
-  "death.attack.guardian_staff": "%1$s was killed by a water pulse",
   "item.minecraft.lingering_potion.effect.criticality_potion": "Lingering Potion of Criticality",
   "item.better_tools.crystallite_sword_lapis": "Crystallite Sword",
   "advancements.all_effect_armor_adv.descr": "Obtain one of every type of base level Effect Armor",
@@ -70,6 +69,7 @@
   "block.better_tools.light_polished_gold_block": "Light Polished Gold Block",
   "item.better_tools.crystallite_sword_sapphire": "Crystallite Sword",
   "block.better_tools.dark_polished_copper_trapdoor": "Dark Polished Copper Trapdoor",
+  "death.attack.water_pulse_damage.player": "%1$s was blasted with a water pulse whilst trying to escape %2$s",
   "item.better_tools.nether_diamond_boots": "Nether Diamond Boots",
   "item.better_tools.crystallite_hoe_ruby": "Crystallite Hoe",
   "item.minecraft.potion.effect.potion_of_decay_long": "Potion of Decay",
@@ -99,7 +99,9 @@
   "subtitles.rick_roll": "",
   "block.better_tools.polished_gold_stairs": "Polished Gold Stairs",
   "item.better_tools.crystallite_pickaxe_lapis": "Crystallite Pickaxe",
+  "death.attack.freeze_shatter_damage.item": "%1$s was shattered to pieces by %2$s using %3$s",
   "block.better_tools.polished_diamond_stairs": "Metallic Diamond Stairs",
+  "death.attack.poison_mushroom_damage": "%1$s was poisoned by a mushroom",
   "attribute.better_tools.critical_hit_multiplier": "Critical Hit Multiplier",
   "advancements.end_titanium_armor_adv.descr": "Wear a full set of Ender Titanium armor",
   "item.better_tools.block_dance.desc": "Gareth Coker - Dance of the Blocks",
@@ -121,8 +123,6 @@
   "effect.better_tools.double_jump.description": "Allows for one extra jump in mid-air per level",
   "item.better_tools.crystallite_armor_sapphire_chestplate": "Crystallite Chestplate",
   "item.better_tools.flint_pickaxe": "Flint Pickaxe",
-  "death.attack.guardian_staff.player": "%1$s was killed by a water pulse whilst fighting %2$s",
-  "death.attack.karma.player": "%1$s got instant karma whilst fighting %2$s",
   "item.better_tools.crystallite_armor_gold_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_sculk": "Crystallite Hoe",
   "item.better_tools.obsidian_stick": "Obsidian Stick",
@@ -188,7 +188,6 @@
   "item.better_tools.stone_dagger": "Stone Dagger",
   "item.better_tools.sapphire": "Sapphire",
   "item.better_tools.crystallite_armor_emerald_helmet": "Crystallite Helmet",
-  "death.attack.karma": "%1$s got instant karma",
   "item.better_tools.crystallite_armor_topaz_boots": "Crystallite Boots",
   "item.better_tools.crystallite_armor_sculk_leggings": "Crystallite Leggings",
   "item.better_tools.crystallite_hoe_iron": "Crystallite Hoe",
@@ -220,7 +219,6 @@
   "gui.better_tools.attributes_viewer.label_001": "00",
   "gui.better_tools.attributes_viewer.label_000": "attack_damage_mod",
   "block.copper_tools_and_armor.nether_diamond_block": "Nether Diamond Block",
-  "death.attack.poison_mushroom.player": "%1$s was poisoned by a mushroom whilst fighting %2$s",
   "item.minecraft.potion.effect.potion_of_decay": "Potion of Decay",
   "gui.better_tools.attributes_viewer.label_value": "Value",
   "effect.karma_potion": "Karma",
@@ -275,6 +273,7 @@
   "advancements.nether_diamond_adv.title": "Diamonds! (Fire Edition)",
   "block.better_tools.light_polished_lapis_wall": "Light Metallic Lapis Lazuli Wall",
   "item.better_tools.crystallite_armor_sky_leggings": "Crystallite Leggings",
+  "death.attack.poison_mushroom_damage.player": "%1$s was poisoned by a mushroom whilst trying to escape %2$s",
   "item.better_tools.crystallite_hoe": "Crystallite Hoe",
   "advancements.nether_diamond_tools_adv.title": "Fiery Arsenal",
   "item.better_tools.diamond_magma_chestplate": "Magma Chestplate",
@@ -353,6 +352,7 @@
   "item.better_tools.crystallite_shovel_lapis": "Crystallite Shovel",
   "item.better_tools.rick_roll_disc.desc": "Rick Astley - Never Gonna Give You Up",
   "item.better_tools.iron_cactus_chestplate": "Cactus Shirt",
+  "death.attack.poison_mushroom_damage.item": "%1$s was poisoned by a mushroom whilst fighting %2$s using %3$s",
   "item.better_tools.crystallite_sword_sculk": "Crystallite Sword",
   "item.better_tools.sapphire_axe": "Sapphire Axe",
   "block.better_tools.dark_polished_copper_block": "Dark Polished Copper Block",
@@ -457,6 +457,7 @@
   "block.better_tools.light_polished_copper_slab": "Polished Copper Slab",
   "advancements.nether_diamond_adv.descr": "Obtain a Nether Diamond",
   "advancements.night_phantom_adv.title": "Night Phantom",
+  "death.attack.water_pulse_damage.item": "%1$s was blasted with a water pulse from %2$s\u0027s %3$s",
   "item.better_tools.crystallite_pickaxe_nether_diamond": "Crystallite Pickaxe",
   "gui.better_tools.attributes_viewer.label_0000": "knockback_resistance_mod",
   "block.better_tools.polished_gold_block": "Polished Gold Block",
@@ -526,7 +527,6 @@
   "item.better_tools.flint_shovel": "Flint Shovel",
   "block.better_tools.end_titanium_ore": "Ender Titanium Ore",
   "item.better_tools.crystallite_sword_emerald": "Crystallite Sword",
-  "death.attack.shockwave.player": "%1$s was killed by a shockwave whilst fighting %2$s",
   "block.better_tools.dark_polished_emerald_stairs": "Dark Metallic Emerald Stairs",
   "item.better_tools.glass_boots": "Glass Boots",
   "block.better_tools.polished_amethyst_trapdoor": "Metallic Amethyst Trapdoor",
@@ -694,6 +694,7 @@
   "item.better_tools.crystallite_sword_gold": "Crystallite Sword",
   "item.minecraft.splash_potion.effect.potion_of_decay_2": "Splash Potion of Decay",
   "item.copper_tools_and_armor.copper_pickaxe": "Copper Pickaxe",
+  "death.attack.freeze_shatter_damage": "%1$s was shattered to pieces",
   "block.better_tools.light_polished_nether_diamond_slab": "Light Metallic Nether Diamond Slab",
   "advancements.nether_diamond_armor_adv.title": "Cover me in Nether Diamonds",
   "item.better_tools.guardian_spike": "Guardian Spike",
@@ -709,6 +710,7 @@
   "subtitles.master_builders": "",
   "advancements.topaz_adv.title": "Human Lightning Rod",
   "item.better_tools.crystallite_armor_ruby_boots": "Crystallite Boots",
+  "death.attack.shockwave_damage.player": "%1$s was killed by a shockwave whilst trying to escape %2$s",
   "itemGroup.tabtools_and_armor_tab": "BT+A - Tools and Armor Sets",
   "item.better_tools.crystallite_armor_nether_diamond_helmet": "Crystallite Helmet",
   "item.better_tools.crystallite_axe_ruby": "Crystallite Axe",
@@ -717,6 +719,7 @@
   "block.better_tools.light_polished_emerald_stairs": "Metallic Emerald Stairs",
   "item.better_tools.crystallite_armor_sky_boots": "Crystallite Boots",
   "item.better_tools.ice_effect": "Ice Effect",
+  "death.attack.shockwave_damage.item": "%1$s was killed by a shockwave from %2$s using %3$s",
   "block.better_tools.polished_topaz_stairs": "Metallic Topaz Stairs",
   "item.better_tools.crystallite_dagger_sculk": "Crystallite Dagger",
   "item_group.better_tools.better_tools_and_armor_misc": "Better Tools And Armor - Misc.",
@@ -732,7 +735,6 @@
   "item.better_tools.ruby_hoe": "Ruby Hoe",
   "advancements.overkill_adv.title": "Overkill",
   "block.better_tools.dark_polished_copper_slab": "Dark Polished Copper Slab",
-  "death.attack.poison_mushroom": "%1$s was poisoned by a mushroom",
   "item.better_tools.crystallite_armor_nether_diamond_leggings": "Crystallite Leggings",
   "item.better_tools.diamond_rabbit_boots": "Rabbit Boots",
   "item.better_tools.block_dance": "Music Disc",
@@ -740,7 +742,9 @@
   "item.better_tools.crystallite_pickaxe_gold": "Crystallite Pickaxe",
   "item.better_tools.magic_crystal": "§9Magic Crystal",
   "item.better_tools.end_titanium_pickaxe": "Ender Titanium Pickaxe",
+  "death.attack.water_pulse_damage": "%1$s was blasted with a water pulse",
   "item.better_tools.ice_crystal": "§bFrozen Crystal",
+  "death.attack.freeze_shatter_damage.player": "%1$s was shattered to pieces whilst trying to escape %2$s",
   "block.better_tools.dark_polished_emerald_wall": "Dark Metallic Emerald Wall",
   "item.better_tools.crystallite_hoe_prismarine": "Crystallite Hoe",
   "item.better_tools.glass_leggings": "Glass Leggings",
@@ -784,11 +788,11 @@
   "enchantment.better_tools.karma_curse": "Curse of Karma",
   "effect.better_tools.swift_swim": "Swift Swim",
   "item.minecraft.potion.effect.criticality_potion_2": "Potion of Criticality",
-  "death.attack.shockwave": "%1$s was killed by a shockwave",
   "itemGroup.tabblocks_tab": "BT+A - Building Blocks",
   "gui.better_tools.attributes_viewer.label_crit_multiplier": "Critical Hit",
   "block.better_tools.cut_crystallite_block": "Cut Crystallite Block",
   "item.better_tools.shrunk_music.desc": "Gareth Coker - Toys on a Tear",
+  "death.attack.shockwave_damage": "%1$s was killed by a shockwave",
   "item.better_tools.crystallite_armor_prismarine_helmet": "Crystallite Helmet",
   "item.better_tools.ruby_shovel": "Ruby Shovel",
   "advancements.diamond_apple_adv.descr": "Eat a Diamond Apple",
