Fixed freeze shatter damage

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -694,7 +694,7 @@
   "item.better_tools.crystallite_sword_gold": "Crystallite Sword",
   "item.minecraft.splash_potion.effect.potion_of_decay_2": "Splash Potion of Decay",
   "item.copper_tools_and_armor.copper_pickaxe": "Copper Pickaxe",
-  "death.attack.freeze_shatter_damage": "%1$s was shattered to pieces",
+  "death.attack.freeze_shatter_damage": "%1$s was shattered to pieces by %2$s",
   "block.better_tools.light_polished_nether_diamond_slab": "Light Metallic Nether Diamond Slab",
   "advancements.nether_diamond_armor_adv.title": "Cover me in Nether Diamonds",
   "item.better_tools.guardian_spike": "Guardian Spike",
