Fixed localization keys for projectiles

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.better_tools.ruby": "Ruby",
   "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
   "item.better_tools.flint_hoe": "Flint Hoe",
+  "entity.better_tools.projectile.electric_staff_projectile": "Lightning Staff",
   "advancements.crystallite_tool_upgrade_adv.title": "Crystal Tool Smith",
   "item.better_tools.poison_charm": "§5Poison Charm",
   "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
@@ -60,6 +61,7 @@
   "advancements.desperation_adv.descr": "Wear a Chestplate enchanted with Desperation while at or below 20% HP",
   "item.better_tools.crystallite_armor_netherite_leggings": "Crystallite Leggings",
   "item.minecraft.potion.effect.double_jump_potion_long": "Potion of Double Jump",
+  "entity.better_tools.projectile.projectile_ice_staff_projectile_from_dispenser": "Dispenser using Ice Staff",
   "block.better_tools.purple_mushroom_block": "Purple Mushroom Block",
   "item.better_tools.end_titanium_helmet": "Ender Titanium Helmet",
   "item.better_tools.crystallite_shovel_netherite": "Crystallite Shovel",
@@ -68,6 +70,7 @@
   "item.better_tools.nether_diamond_hoe": "Nether Diamond Hoe",
   "block.better_tools.light_polished_gold_block": "Light Polished Gold Block",
   "item.better_tools.crystallite_sword_sapphire": "Crystallite Sword",
+  "entity.better_tools.projectile.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "block.better_tools.dark_polished_copper_trapdoor": "Dark Polished Copper Trapdoor",
   "death.attack.water_pulse_damage.player": "%1$s was blasted with a water pulse whilst trying to escape %2$s",
   "item.better_tools.nether_diamond_boots": "Nether Diamond Boots",
@@ -182,8 +185,8 @@
   "item.better_tools.crystallite_pickaxe_topaz": "Crystallite Pickaxe",
   "item.better_tools.crystallite_dagger_sapphire": "Crystallite Dagger",
   "item.minecraft.splash_potion.effect.criticality_potion_long": "Splash Potion of Criticality",
-  "item.better_tools.crystallite_hoe_lapis": "Crystallite Hoe",
   "advancements.nether_diamond_tools_adv.descr": "Craft a full set of Nether Diamond tools",
+  "item.better_tools.crystallite_hoe_lapis": "Crystallite Hoe",
   "advancements.berry_pie_adv.descr": "Eat a sweet Berry Pie",
   "item.better_tools.stone_dagger": "Stone Dagger",
   "item.better_tools.sapphire": "Sapphire",
@@ -232,6 +235,7 @@
   "block.better_tools.light_polished_amethyst_block": "Light Metallic Amethyst Block",
   "item_group.better_tools.blocks_tab": "BT+A - Building Blocks",
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
+  "entity.better_tools.projectile.ice_staff_projectile": "Ice Staff",
   "advancements.sugar_clump_adv.title": "Sugar Rush",
   "item.better_tools.topaz_shovel": "Topaz Shovel",
   "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
@@ -240,6 +244,7 @@
   "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
   "item.better_tools.nether_diamond_dagger": "Nether Diamond Dagger",
   "item.better_tools.tough_crystal": "§7Tough Crystal",
+  "entity.better_tools.projectile.fire_staff_projectile": "Fire Staff",
   "item.better_tools.echo_crystal": "§3Echo Crystal",
   "item.minecraft.splash_potion.effect.double_jump_potion_long": "Splash Potion of Double Jump",
   "death.attack.karma_damage": "%1$s got instant karma from %2$s",
@@ -471,6 +476,7 @@
   "gui.better_tools.attributes_viewer.label_0007": "0.00",
   "gui.better_tools.attributes_viewer.label_0004": "attack_damage_val",
   "gui.better_tools.attributes_viewer.label_0005": "0.00",
+  "entity.better_tools.projectile.projectile_fire_staff_dispenser_projectile": "Dispenser using Fire Staff",
   "item.better_tools.topaz_leggings": "Topaz Leggings",
   "gui.better_tools.attributes_viewer.label_0002": "0.00",
   "gui.better_tools.attributes_viewer.label_0003": "0.00",
