Actually fixed localization this time

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -1,25 +1,24 @@
 {
-  "block.better_tools.crystallite_block": "Crystallite Block",
   "item.better_tools.ruby": "Ruby",
-  "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
+  "block.better_tools.crystallite_block": "Crystallite Block",
   "item.better_tools.flint_hoe": "Flint Hoe",
-  "entity.better_tools.projectile.electric_staff_projectile": "Lightning Staff",
+  "block.better_tools.light_polished_coal_trapdoor": "Light Metallic Coal Trapdoor",
   "advancements.crystallite_tool_upgrade_adv.title": "Crystal Tool Smith",
-  "item.better_tools.poison_charm": "§5Poison Charm",
   "block.better_tools.light_polished_coal_block": "Light Metallic Coal Block",
+  "item.better_tools.poison_charm": "§5Poison Charm",
   "item_group.better_tools.crystallite_tab": "BT+A - Crystallite",
-  "block.better_tools.polished_ruby_trapdoor": "Metallic Ruby Trapdoor",
   "item.minecraft.splash_potion.effect.double_jump_potion": "Splash Potion of Double Jump",
+  "block.better_tools.polished_ruby_trapdoor": "Metallic Ruby Trapdoor",
   "item.minecraft.tipped_arrow.effect.double_jump_potion_2": "Arrow of Double Jump",
-  "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
   "block.better_tools.light_polished_copper_stairs": "Polished Copper Stairs",
+  "item.better_tools.crystallite_armor_amethyst_chestplate": "Crystallite Chestplate",
   "item.better_tools.fire_crystal": "§4Flame Crystal",
   "item.copper_tools_and_armor.master_builder": "Master Builder",
   "item.better_tools.crystallite_dagger_amethyst": "Crystallite Dagger",
   "item.better_tools.battle_axe": "Battle Axe",
   "item.minecraft.lingering_potion.effect.potion_of_decay": "Lingering Potion of Decay",
-  "item.better_tools.crystallite_shovel": "Crystallite Shovel",
   "item.better_tools.crystallite_dagger_gold": "Crystallite Dagger",
+  "item.better_tools.crystallite_shovel": "Crystallite Shovel",
   "block.better_tools.light_polished_lapis_trapdoor": "Light Metallic Lapis Lazuli Trapdoor",
   "item.better_tools.crystallite_armor_redstone_helmet": "Crystallite Helmet",
   "item.better_tools.end_titanium_axe": "Ender Titanium Axe",
@@ -31,10 +30,11 @@
   "item.better_tools.gold_dagger": "Golden Dagger",
   "item.minecraft.lingering_potion.effect.swift_swim_potion_2": "Lingering Potion of Rapidity",
   "item.copper_tools_and_armor.copper_shovel": "Copper Shovel",
+  "entity.better_tools.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "item.better_tools.crystallite_armor_sapphire_helmet": "Crystallite Helmet",
   "item.better_tools.crystallite_armor_iron_boots": "Crystallite Boots",
-  "item.better_tools.crystallite_sword": "Crystallite Sword",
   "item.better_tools.fire_staff": "Fire Staff",
+  "item.better_tools.crystallite_sword": "Crystallite Sword",
   "item.better_tools.crystallite_axe_topaz": "Crystallite Axe",
   "item.better_tools.guardian_necklace": "§3Guardian Necklace",
   "item.better_tools.crystallite_pickaxe": "Crystallite Pickaxe",
@@ -61,7 +61,6 @@
   "advancements.desperation_adv.descr": "Wear a Chestplate enchanted with Desperation while at or below 20% HP",
   "item.better_tools.crystallite_armor_netherite_leggings": "Crystallite Leggings",
   "item.minecraft.potion.effect.double_jump_potion_long": "Potion of Double Jump",
-  "entity.better_tools.projectile.projectile_ice_staff_projectile_from_dispenser": "Dispenser using Ice Staff",
   "block.better_tools.purple_mushroom_block": "Purple Mushroom Block",
   "item.better_tools.end_titanium_helmet": "Ender Titanium Helmet",
   "item.better_tools.crystallite_shovel_netherite": "Crystallite Shovel",
@@ -70,7 +69,6 @@
   "item.better_tools.nether_diamond_hoe": "Nether Diamond Hoe",
   "block.better_tools.light_polished_gold_block": "Light Polished Gold Block",
   "item.better_tools.crystallite_sword_sapphire": "Crystallite Sword",
-  "entity.better_tools.projectile.projectile_lightning_staff_dispenser_projectile": "Dispenser using Lightning Staff",
   "block.better_tools.dark_polished_copper_trapdoor": "Dark Polished Copper Trapdoor",
   "death.attack.water_pulse_damage.player": "%1$s was blasted with a water pulse whilst trying to escape %2$s",
   "item.better_tools.nether_diamond_boots": "Nether Diamond Boots",
@@ -95,8 +93,8 @@
   "item.better_tools.golden_potato": "Golden Potato",
   "advancements.golden_potato_adv.title": "Gilded Gardening",
   "advancements.karma_adv.descr": "Be attacked while effected with Karma",
-  "block.better_tools.light_polished_gold_wall": "Light Polished Gold Wall",
   "item.better_tools.crystallite_armor_iron_helmet": "Crystallite Helmet",
+  "block.better_tools.light_polished_gold_wall": "Light Polished Gold Wall",
   "block.better_tools.light_polished_emerald_block": "Metallic Emerald Block",
   "advancements.life_aura_adv.title": "Full Potential",
   "subtitles.rick_roll": "",
@@ -156,11 +154,11 @@
   "advancements.ice_staff_adv.descr": "Freeze a mob with an Ice Staff",
   "enchantment.better_tools.karma_curse.desc": "Get payback for your attacks",
   "item.better_tools.crystallite_axe_lapis": "Crystallite Axe",
-  "item.copper_tools_and_armor.copper_sword": "Copper Sword",
   "item.minecraft.tipped_arrow.effect.potion_of_decay_2": "Arrow of Decay",
+  "item.copper_tools_and_armor.copper_sword": "Copper Sword",
   "item.better_tools.crystallite_axe_sculk": "Crystallite Axe",
-  "biome.better_tools.fungal_caves": "Fungal Caves",
   "item.better_tools.crystallite_dagger_netherite": "Crystallite Dagger",
+  "biome.better_tools.fungal_caves": "Fungal Caves",
   "item.better_tools.crystallite_axe_gold": "Crystallite Axe",
   "item.better_tools.diamond_blackstone_leggings": "Gilded Blackstone Leggings",
   "item.better_tools.apple_juice": "Apple Juice",
@@ -206,8 +204,8 @@
   "block.better_tools.ruby_ore": "Ruby Ore",
   "gui.better_tools.attributes_viewer.label_knockback": "Knockback",
   "item.better_tools.crying_obsidian_helmet": "Crying Obsidian Helmet",
-  "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
   "item.better_tools.rick_roll_disc": "Music Disc",
+  "item.better_tools.crystallite_sword_amethyst": "Crystallite Sword",
   "item.better_tools.crystallite_dagger_redstone": "Crystallite Dagger",
   "block.better_tools.sapphire_ore": "Sapphire Ore",
   "gui.better_tools.attributes_viewer.label_009": "00",
@@ -235,16 +233,15 @@
   "block.better_tools.light_polished_amethyst_block": "Light Metallic Amethyst Block",
   "item_group.better_tools.blocks_tab": "BT+A - Building Blocks",
   "item.copper_tools_and_armor.copper_axe": "Copper Axe",
-  "entity.better_tools.projectile.ice_staff_projectile": "Ice Staff",
-  "advancements.sugar_clump_adv.title": "Sugar Rush",
   "item.better_tools.topaz_shovel": "Topaz Shovel",
+  "advancements.sugar_clump_adv.title": "Sugar Rush",
   "advancements.end_titanium_tools_adv.descr": "Smith a full set of Ender Titanium tools",
+  "entity.better_tools.projectile_ice_staff_projectile": "Ice Staff",
   "advancements.guardian_staff_adv.descr": "Hit a mob with the water pulse from a Guardian Staff",
   "item.better_tools.sapphire_sword": "Sapphire Sword",
   "item.better_tools.crystallite_shovel_diamond": "Crystallite Shovel",
   "item.better_tools.nether_diamond_dagger": "Nether Diamond Dagger",
   "item.better_tools.tough_crystal": "§7Tough Crystal",
-  "entity.better_tools.projectile.fire_staff_projectile": "Fire Staff",
   "item.better_tools.echo_crystal": "§3Echo Crystal",
   "item.minecraft.splash_potion.effect.double_jump_potion_long": "Splash Potion of Double Jump",
   "death.attack.karma_damage": "%1$s got instant karma from %2$s",
@@ -255,21 +252,21 @@
   "item.better_tools.iron_hearty_chestplate": "Hearty Shirt",
   "item.better_tools.crystallite_dagger_emerald": "Crystallite Dagger",
   "item.better_tools.crystallite_armor_topaz_leggings": "Crystallite Leggings",
-  "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
   "item.better_tools.magma_chestplate": "Magma Chestplate",
-  "item.better_tools.heart_charm": "§cHeart Charm",
+  "enchantment.copper_tools_and_armor.smelting_touch": "Smelting Touch",
   "item.better_tools.netherite_dagger": "Netherite Dagger",
+  "item.better_tools.heart_charm": "§cHeart Charm",
   "item.copper_tools_and_armor.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "advancements.end_titanium_armor_adv.title": "One with the End",
   "item.better_tools.crystallite_shovel_ruby": "Crystallite Shovel",
   "item.better_tools.crystallite_sword_prismarine": "Crystallite Sword",
-  "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
   "item.minecraft.tipped_arrow.effect.swift_swim_potion_2": "Arrow of Rapidity",
+  "item.minecraft.tipped_arrow.effect.criticality_potion": "Arrow of Criticality",
   "advancements.crystallite_gem_adv.title": "Local Jeweller",
   "gui.better_tools.attributes_viewer.label_movement_speed": "Movement Spd.",
-  "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
-  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
   "item.better_tools.ruby_leggings": "Ruby Leggings",
+  "block.better_tools.polished_diamond_slab": "Metallic Diamond Slab",
+  "item.better_tools.withered_gauntlet": "§8Withered Gauntlet",
   "item.better_tools.earth_circlet": "§dEarth Circlet",
   "advancements.crystallite_tool_upgrade_adv.descr": "Upgrade a Crystallite tool for a useful effect",
   "item.better_tools.crystallite_armor_lapis_leggings": "Crystallite Leggings",
@@ -291,8 +288,8 @@
   "subtitles.crystallite_break": "Crystallite broken",
   "advancements.freeze_shatter_adv.descr": "Shatter a frozen mob with an attack",
   "advancements.warden_staff_adv.descr": "Hit a mob with a sonic boom using a Warden Staff",
-  "block.better_tools.polished_ruby_wall": "Metallic Ruby Wall",
   "advancements.ruby_gem_adv.title": "I thought this was removed...?",
+  "block.better_tools.polished_ruby_wall": "Metallic Ruby Wall",
   "block.better_tools.deepslate_ruby_ore": "Deepslate Ruby Ore",
   "block.better_tools.blackstone_magma": "Blackstone Magma Block",
   "item.better_tools.crystallite_sword_diamond": "Crystallite Sword",
@@ -302,6 +299,7 @@
   "item.better_tools.topaz_chestplate": "Topaz Chestplate",
   "item.better_tools.heal_crystal": "§cHeal Crystal",
   "advancements.guardian_staff_multikill_adv.descr": "Kill 10 mobs with one water pulse using a Guardian Staff",
+  "entity.better_tools.projectile_fire_staff_projectile": "Fire Staff",
   "advancements.flint_axe_adv.descr": "Craft a Flint Axe",
   "item.better_tools.topaz_helmet": "Topaz Helmet",
   "block.better_tools.polished_diamond_wall": "Metallic Diamond Wall",
@@ -311,9 +309,9 @@
   "advancements.end_titanium_adv.title": "Risky Mining",
   "item.better_tools.crystallite_sword_sky": "Crystallite Sword",
   "item.better_tools.nether_diamond": "Nether Diamond",
-  "item.better_tools.crystallite_shovel_sculk": "Crystallite Shovel",
-  "block.better_tools.light_polished_lapis_stairs": "Light Metallic Lapis Lazuli Stairs",
   "item.better_tools.crystallite_dagger_diamond": "Crystallite Dagger",
+  "block.better_tools.light_polished_lapis_stairs": "Light Metallic Lapis Lazuli Stairs",
+  "item.better_tools.crystallite_shovel_sculk": "Crystallite Shovel",
   "subtitles.mogus_drip": "When the impostor is sus",
   "item.minecraft.potion.effect.karma_potion": "Potion of Karma",
   "advancements.smelting_touch_adv.title": "Handheld Blast Furnace",
@@ -325,6 +323,7 @@
   "item.better_tools.sapphire_leggings": "Sapphire Leggings",
   "item.better_tools.crystallite_axe_prismarine": "Crystallite Axe",
   "item.better_tools.end_titanium_ingot": "Ender Titanium Ingot",
+  "entity.better_tools.projectile_fire_staff_dispenser_projectile": "Dispenser using Fire Staff",
   "item.better_tools.master_builder": "Music Disc",
   "advancements.hearty_adv.descr": "Wear a Hearty Shirt",
   "item.better_tools.nature_crystal": "§aNature Crystal",
@@ -345,8 +344,8 @@
   "item.better_tools.crystallite_armor_lapis_chestplate": "Crystallite Chestplate",
   "item.better_tools.nether_diamond_pickaxe": "Nether Diamond Pickaxe",
   "block.better_tools.dark_polished_iron_trapdoor": "Dark Polished Iron Trapdoor",
-  "block.better_tools.polished_gold_trapdoor": "Polished Gold Trapdoor",
   "advancements.flint_tools_adv.descr": "Obtain a full set of Flint tools",
+  "block.better_tools.polished_gold_trapdoor": "Polished Gold Trapdoor",
   "item.minecraft.tipped_arrow.effect.criticality_potion_2": "Arrow of Criticality",
   "item.better_tools.spiked_crystal": "§8Spiked Crystal",
   "item.better_tools.diamond_crying_obsidian_helmet": "Crying Obsidian Helmet",
@@ -357,8 +356,8 @@
   "item.better_tools.crystallite_shovel_lapis": "Crystallite Shovel",
   "item.better_tools.rick_roll_disc.desc": "Rick Astley - Never Gonna Give You Up",
   "item.better_tools.iron_cactus_chestplate": "Cactus Shirt",
-  "death.attack.poison_mushroom_damage.item": "%1$s was poisoned by a mushroom whilst fighting %2$s using %3$s",
   "item.better_tools.crystallite_sword_sculk": "Crystallite Sword",
+  "death.attack.poison_mushroom_damage.item": "%1$s was poisoned by a mushroom whilst fighting %2$s using %3$s",
   "item.better_tools.sapphire_axe": "Sapphire Axe",
   "block.better_tools.dark_polished_copper_block": "Dark Polished Copper Block",
   "item.better_tools.diamond_hard_crystal": "§bDiamond Hard Crystal",
@@ -376,6 +375,7 @@
   "advancements.flint_tools_adv.title": "True Caveman",
   "item.better_tools.crystallite_sword_topaz": "Crystallite Sword",
   "advancements.fire_staff_pokemon_adv.title": "It\u0027s not very effective...",
+  "entity.better_tools.projectile_electric_staff_projectile": "Lightning Staff",
   "item.better_tools.crystallite_armor_topaz_helmet": "Crystallite Helmet",
   "item.better_tools.sapphire_helmet": "Sapphire Helmet",
   "item.minecraft.lingering_potion.effect.karma_potion_long": "Lingering Potion of Karma",
@@ -476,7 +476,6 @@
   "gui.better_tools.attributes_viewer.label_0007": "0.00",
   "gui.better_tools.attributes_viewer.label_0004": "attack_damage_val",
   "gui.better_tools.attributes_viewer.label_0005": "0.00",
-  "entity.better_tools.projectile.projectile_fire_staff_dispenser_projectile": "Dispenser using Fire Staff",
   "item.better_tools.topaz_leggings": "Topaz Leggings",
   "gui.better_tools.attributes_viewer.label_0002": "0.00",
   "gui.better_tools.attributes_viewer.label_0003": "0.00",
@@ -777,6 +776,7 @@
   "block.better_tools.light_polished_copper_block": "Polished Copper Block",
   "advancements.luck_adv.title": "Lucky Leprechaun",
   "item.better_tools.crystallite_armor_ruby_helmet": "Crystallite Helmet",
+  "entity.better_tools.projectile_ice_staff_projectile_from_dispenser": "Dispenser using Ice Staff",
   "advancements.ruby_sugar_adv.title": "More Speed, More Haste",
   "item.better_tools.gilded_crystal": "§6Gilded Crystal",
   "block.better_tools.dark_polished_coal_trapdoor": "Dark Metallic Coal Trapdoor",
