Added Jewellery Table and Jeweller villager + trades element

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.copper_tools_and_armor.master_builder": "Master Builder",
   "item.better_tools.crystallite_dagger_amethyst": "Crystallite Dagger",
   "item.better_tools.battle_axe": "Battle Axe",
+  "block.better_tools.jewellery_table": "Jewellery Table",
   "item.minecraft.lingering_potion.effect.potion_of_decay": "Lingering Potion of Decay",
   "item.better_tools.crystallite_dagger_gold": "Crystallite Dagger",
   "item.better_tools.crystallite_shovel": "Crystallite Shovel",
@@ -70,6 +71,7 @@
   "block.better_tools.light_polished_gold_block": "Light Polished Gold Block",
   "item.better_tools.crystallite_sword_sapphire": "Crystallite Sword",
   "block.better_tools.dark_polished_copper_trapdoor": "Dark Polished Copper Trapdoor",
+  "entity.minecraft.villager.better_tools.jeweller": "Jeweller",
   "death.attack.water_pulse_damage.player": "%1$s was blasted with a water pulse whilst trying to escape %2$s",
   "item.better_tools.nether_diamond_boots": "Nether Diamond Boots",
   "item.better_tools.crystallite_hoe_ruby": "Crystallite Hoe",
