Edited creative tab order for Jewellery Table

--- a/src/main/resources/assets/better_tools/lang/en_us.json
+++ b/src/main/resources/assets/better_tools/lang/en_us.json
@@ -366,7 +366,7 @@
   "item.minecraft.tipped_arrow.effect.luck_potion_2": "Arrow of Luck",
   "advancements.warden_staff_adv.title": "Supersonic Staff!",
   "subtitles.crystallite_place": "Crystallite placed",
-  "advancements.charms_all_slots_adv.descr": "Have 4 crystallite charms equipped at the same time",
+  "advancements.charms_all_slots_adv.descr": "Have 4 Crystallite Charms equipped at the same time",
   "block.better_tools.climbable_wall": "Climbable Wall",
   "item.minecraft.tipped_arrow.effect.karma_potion_long": "Arrow of Karma",
   "advancements.experienced_adv.descr": "Enchant a weapon with Experienced",
@@ -511,7 +511,7 @@
   "item.better_tools.magic_ring": "§9Magic Ring",
   "item.better_tools.bouncy_bracelet": "§bBouncy Bracelet",
   "advancements.end_titanium_tools_adv.title": "Titanic Tools",
-  "advancements.charming_adv.descr": "Equip a crystallite charm",
+  "advancements.charming_adv.descr": "Equip a Crystallite Charm",
   "item.better_tools.topaz_axe": "Topaz Axe",
   "block.better_tools.dark_polished_coal_block": "Dark Metallic Coal Block",
   "item.better_tools.diamond_ruby_leggings": "Ruby Leggings",
